# bugcar_archieved

./: .gitignore  README.md  frames.gv
arduino/imu_mag_rosserial/: imu_mag_rosserial.ino
arduino/imu_mag_rosserial/MPU6050/: MPU6050.cpp  MPU6050_6Axis_MotionApps_V6_12.h
arduino/imu_mag_rosserial/ros_lib/: ArduinoHardware.h
arduino/imu_rosserial/: imu_rosserial.ino
arduino/libraries/MPU6050/: MPU6050_6Axis_MotionApps20.h  MPU6050_9Axis_MotionApps41.h
arduino/sbus_rosserial/: sbus_rosserial.ino
bag_files/: README.md  filtered.bag
src/bno055_usb_stick/bno055_usb_stick/: README.md
src/bno055_usb_stick/bno055_usb_stick_msgs/: README.md
src/bugcar_bringup/: CMakeLists.txt  README.md  package.xml
src/bugcar_bringup/cfg/: dual_ekf_navsat.yaml  global_costmap_params.yaml  local_costmap_params.yaml  single_gps_config.yaml  teb_local_planner_params.yaml  twist_mux_locks.yaml
src/bugcar_bringup/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/bugcar_bringup/launch/: barebone_move_base.launch  bno055.launch  bugcar_robot_localization (yaml test).launch  bugcar_robot_localization.launch  diagnostics_agg_node.launch  fake_move_base.launch  frames.gv  launch_all.launch  move_base_ggmap_planner.launch  move_base_ggmap_planner_robot_localization.launch  osm_move_base.launch  rc_only.launch  roboclaw.launch  sensor_logger.launch  simple_twist_mux.launch  simulation.launch  single_gps.launch  teb_move_base.launch  test_run_12-04-20.launch  test_run_rc.launch
src/bugcar_bringup/osm/: map(1).osm  map(2).osm  map.osm
src/bugcar_bringup/script/: conditional_launch.py
src/bugcar_image_segmentation/: CMakeLists.txt  package.xml  setup.py
src/bugcar_image_segmentation/src/: road_segmentation.py
src/bugcar_mapviz/: README.md
src/bugcar_mapviz/cfg/: bugcar.mvc
src/bugcar_mapviz/launch/: mapviz.launch
src/bugcar_mapviz/src/: mapviz_origin_set.py
src/bugcar_navigation/: README.md
src/bugcar_navigation/src/google_planner/: CMakeLists.txt  package.xml
src/bugcar_navigation/src/google_planner/include/: google_planner.h
src/bugcar_navigation/src/google_planner/src/: google_planner.cpp
src/bugcar_robot_localization/: CMakeLists.txt  README.md  common_bugs.txt
src/bugcar_robot_localization/launch/: bugcar_robot_localization.launch  rosbag_test.launch  simulation.launch  test.launch  test_run_rc.launch  virtual_imu_localization.launch  virtual_odom_localization.launch
src/bugcar_robot_localization/params/: dual_ekf_navsat.yaml  virtual_imu_localization.yaml  virtual_odom_localization.yaml
src/bugcar_robot_localization/scripts/: wait_for_gps.py
src/bugcar_robot_localization/src/: navsat_transform.cpp
src/roboclaw_ros/: README.md
src/rosserial/: README.md
src/test/: CMakeLists.txt  fake_planner_plugin.xml  package.xml
src/test/include/: fake_planner.h
src/test/scripts/: virtual_imu.py  virtual_odom.py
src/test/src/: fake_planner.cpp
src/twist_mux/config/: twist_mux_topics.yaml
src/twist_mux/launch/: simple_twist_mux.launch
src/ublox/: README.md
src/ublox/ublox_gps/: CMakeLists.txt  package.xml
src/ublox/ublox_gps/src/: node.cpp
tutorial/: CREATE_PACKAGE.md
tutorial/rossrv/: CMakeLists.txt  package.xml
tutorial/rossrv/scripts/: service_client.py  service_server.py
tutorial/rossrv/src/: test_server.py
tutorial/rossrv/srv/: GetPathLL.srv
(+106 files in other folders)
